--- a/environment.yml
+++ b/environment.yml
@@ -4,8 +4,7 @@ channels:
   - defaults
 dependencies:
   - ipython
-  - tsfresh
-  - numpy<=1.21  # To fix "Numba needs NumPy 1.21 or less" TSFRESH ImportError
+  - numpy
   - obspy
   - pip
   - pygmt
