--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.9
+  - python=3.5
   - ipython
   - numpy
   - obspy
@@ -11,6 +11,9 @@ dependencies:
   - scikit-learn
   - colorcet
   - libcomcat  
+  - tensorflow
+  - keras
+  - baml
   - pip
   - pip:
       - git+https://github.com/uafgeotools/waveform_collection.git
