--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 **/._.DS_Store
 **/__pycache__
 **/__pycache__/*
-**/idea
-**/idea/*
+**/.idea
+**/.idea/*
 **/.ipynb_checkpoints
 **/.ipynb_checkpoints/*
 
