--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,12 @@ timeline_plot_tam*
 timeline_checker_*
 
 # pre release
+/labels/Semi_tremor_labels_20210701_20210831.json
 /models/old_models
 /models/other_models
+/npy_generator_scripts/create_labeled_dataset_semi.py
+/npy_generator_scripts/create_labeled_dataset_semi_supp.py
+/npy_generator_scripts/create_unlabeled_dataset.py
 /debugger.py
 /train_cnn_augment_all.py
 /train_cnn_augment_iter.py
